--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -215,8 +215,8 @@
   }
 
   .btn-primary {
-    border: 2px solid var(--primary);
-    color: var(--primary);
+    border: 2px solid var(--primary-4dp);
+    color: var(--primary-4dp);
     padding: 12px 20px;
     display: inline-block;
 
